// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SimpleList when a transaction is ongoing when this is a new item should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: #FFFFFF;
  margin-bottom: 5px;
  padding: 5px;
  color: blue;
  min-width: 220px;
}

.c0 div:last-child {
  margin-left: auto;
}

.c0 .simple-list-item-title-div:hover {
  color: red;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 40px;
}

<div>
  <form>
    <li
      class="c0"
      data-testid="ListItemElement"
    >
      <div
        class="c1"
      >
        <input
          data-testid="ListItemNewItemInputElement"
          id="newItem"
          name="newItem"
          readonly=""
          required=""
          size="15"
          type="text"
          value="mockItem"
        />
      </div>
      <div />
    </li>
  </form>
</div>
`;

exports[`SimpleList when a transaction is ongoing when this is an existing item should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: #FFFFFF;
  margin-bottom: 5px;
  padding: 5px;
  color: blue;
  min-width: 220px;
}

.c0 div:last-child {
  margin-left: auto;
}

.c0 .simple-list-item-title-div:hover {
  color: red;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 40px;
}

<div>
  <li
    class="c0"
    data-testid="ListItemElement"
  >
    <div
      class="c1 simple-list-item-title-div"
      data-testid="ListItemTitle"
    >
      mockItem
    </div>
    <div />
  </li>
</div>
`;

exports[`SimpleList when outside of a transaction when this is a new item should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: #FFFFFF;
  margin-bottom: 5px;
  padding: 5px;
  color: blue;
  min-width: 220px;
}

.c0 div:last-child {
  margin-left: auto;
}

.c0 .simple-list-item-title-div:hover {
  color: red;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 40px;
}

<div>
  <form>
    <li
      class="c0"
      data-testid="ListItemElement"
    >
      <div
        class="c1"
      >
        <input
          data-testid="ListItemNewItemInputElement"
          id="newItem"
          name="newItem"
          required=""
          size="15"
          type="text"
          value="mockItem"
        />
      </div>
      <div>
        <button
          class="btn btn-success"
          data-testid="ListItemSaveButton"
          style="height: 40px;"
        >
          <span>
            save
          </span>
        </button>
      </div>
    </li>
  </form>
</div>
`;

exports[`SimpleList when outside of a transaction when this is an existing item should match the snapshot on file (styles) 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  background: #FFFFFF;
  margin-bottom: 5px;
  padding: 5px;
  color: blue;
  min-width: 220px;
}

.c0 div:last-child {
  margin-left: auto;
}

.c0 .simple-list-item-title-div:hover {
  color: red;
  cursor: pointer;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 40px;
}

<div>
  <li
    class="c0"
    data-testid="ListItemElement"
  >
    <div
      class="c1 simple-list-item-title-div"
      data-testid="ListItemTitle"
    >
      mockItem
    </div>
    <div />
  </li>
</div>
`;
